2002-06-09  Martin Baulig  <martin@gnome.org>

	* expression.cs (Cast.TryReduce): Added support for consts.

2002-06-08  Ravi Pratap  <ravi@ximian.com>

	* class.cs (Accessor): Hold attributes information so we can pass
	it along.

	* cs-parser.jay (get_accessor_declaration, set_accessor_declaration):
	Modify to pass in attributes attached to the methods.

	(add_accessor_declaration, remove_accessor_declaration): Ditto.

	* attribute.cs (ApplyAttributes, CheckAttribute): Update accordingly
	to handle the Accessor kind :-)

	* class.cs (Property.Emit, Event.Emit): Apply attributes to the accessors
	
2002-06-08  Martin Baulig  <martin@gnome.org>

	* expression.cs (Unary.TryReduceNegative): Added support for
	ULongConstants.

2002-06-08  Martin Baulig  <martin@gnome.org>

	* enum.cs (Enum.LookupEnumValue): Don't report an error if the
	name can't be found in the `defined_names' - the caller will do a
	MemberLookup in this case and thus find methods in System.Enum
	such as Enum.IsDefined().

2002-06-08  Martin Baulig  <martin@gnome.org>

	* enum.cs (Enum.ChangeEnumType): This is a custom version of
	Convert.ChangeType() which works with TypeBuilder created types.
	(Enum.LookupEnumValue, Enum.Define): Use it here.

	* class.cs (TypeContainer.RegisterRequiredImplementations): Added
	`TypeBuilder.BaseType != null' check.
	(TypeContainer.FindMembers): Only lookup parent members if we
	actually have a parent.
	(Method.EmitDestructor): Added `ec.ContainerType.BaseType != null' check.
	(ConstructorInitializer.Resolve): Likewise.

	* interface.cs (Interface.FindMembers): Added
	`TypeBuilder.BaseType != null' check.

	* rootcontext.cs (RootContext.ResolveCore): Added
	"System.Runtime.CompilerServices.IndexerNameAttribute" to
	classes_second_stage.

	* typemanager.cs (TypeManager.InitCoreTypes): Don't initialize
	debug_type and trace_type when compiling with --nostdlib.	

2002-06-07  Martin Baulig  <martin@gnome.org>
